<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.WebViewActivity">

    <ImageView

        android:id="@+id/no_internet_image"
        android:layout_width="wrap_content"
        android:layout_height="277dp"
        android:layout_marginTop="100dp"
        android:layout_centerVertical="false"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/aboutContentDescription"
        android:src="@drawable/no_internet" />

    <TextView
            android:id="@+id/no_internet_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/no_internet_image"
            android:layout_centerHorizontal="true"
            android:text="@string/No_internet"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/no_internet_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/no_internet_heading"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="64dp"
            android:layout_marginVertical="32dp"
            android:gravity="center"
            android:text="@string/check_your_internet_connection_and_try_again"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/try_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/no_internet_text"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/black"
            android:paddingHorizontal="32dp"
            android:text="@string/try_again"
            android:textAllCaps="false"
            app:cornerRadius="16dp" />


</RelativeLayout>